Fix trash button positioning on thumbnails - add position relative

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -584,6 +584,7 @@ textarea.textarea.floating-prompt-input.forging {
 }
 
 .gen-panel-thumb {
+  position: relative;
   width: 108px;
   height: 108px;
   border-radius: 5px;
